AX: Build failure for catalyst https://bugs.webkit.org/show_bug.cgi?id=214202 <rdar://problem/65366125>

Reviewed by Zalan Bujtas.

* accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper accessibilityIsInDescriptionListTerm]):
(-[WebAccessibilityObjectWrapper accessibilityIsInDescriptionListDefinition]):


Canonical link: https://commits.webkit.org/227009@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264243 268f45cc-cd09-0410-ab3c-d52691b4dbfc